@@ -48,3 +48,8 @@ public interface IQueryActivateSkill
 {
     Task<bool> QueryActivateSkill(VanguardCard Invoker, VanguardAutomaticSkill Skill);
 }
+
+public interface ISelectCardsFromDamageZone
+{
+    Task<List<VanguardCard>> SelectCardsFromDamageZone(int amount);
+}
