@@ -2,4 +2,5 @@ public static class TextConstants
 {
     public const string EndPhase = "End Phase";
     public const string ConfirmGuard = "Confirm Guard";
+    public const string Confirm = "Confirm";
 }
